# cxx-arithmetic-parser

./: .gitignore  CMakeLists.txt  ReadMe.md  a.out  main.cpp
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
source/Data/: FunctionList.cpp  FunctionList.h  OperationList.cpp  OperationList.h
source/Expression/: Expression.cpp  Expression.h
source/Factory/: Factory.cpp  Factory.h
source/Parser/: Parser.cpp  Parser.h
source/SimpleExpr/: Constant.cpp  Constant.h  Function.cpp  Function.h  Operation.cpp  Operation.h  virtualExpr.h
